--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">NavigationDrawer</string>
+    <string name="app_home">home</string>
+    <string name="app_setting">setting</string>
 </resources>
