add string content_main

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">NavigationDrawer</string>
     <string name="app_home">home</string>
     <string name="app_setting">setting</string>
+    <!--add string content_main-->
+    <string name="nevdemo">navigation</string>
+    <string name="home">home</string>
+    <string name="setting">setting</string>
+    <!--End add string content_main-->
 </resources>
