--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="home">home</string>
     <string name="setting">setting</string>
     <string name="fileimport">fileimport</string>
+    <string name="slideshow">slideshow</string>
     <!--End add string content_main-->
 
     <!--add text bottom logo-->
